added characters regions, and imaged
Winui.csproj had lines refering to games/Wuther Waves and games/WuWa both being the same files just different folder name, so I assume these were leftover lines before a folder name change and removed those

Jinzhou changed to Huanglong, Jinzhou is the city name, not the region

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -500,17 +500,26 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\yanqing.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\yukong.webp" />
 		<Content Remove="Assets\Games\Honkai\weapons.json" />
-		<Content Remove="Assets\Games\WutheringWaves\characters.json" />
-		<Content Remove="Assets\Games\WutheringWaves\elements.json" />
-		<Content Remove="Assets\Games\WutheringWaves\game.json" />
-		<Content Remove="Assets\Games\WutheringWaves\Images\Characters\Baizhi.png" />
-		<Content Remove="Assets\Games\WutheringWaves\Images\Start_Game.png" />
-		<Content Remove="Assets\Games\WutheringWaves\regions.json" />
-		<Content Remove="Assets\Games\WutheringWaves\weaponClasses.json" />
 		<Content Remove="Assets\Games\WuWa\characters.json" />
 		<Content Remove="Assets\Games\WuWa\elements.json" />
 		<Content Remove="Assets\Games\WuWa\game.json" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Aalto.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Baizhi.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Calcharo.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Chixia.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Danjin.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Encore.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Jianxin.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Jiyan.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Lingyang.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Mortefi.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Rover.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Sanhua.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Taoqi.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Verina.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Yangyang.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Yinlin.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Yuanwu.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Start_Game.png" />
 		<Content Remove="Assets\Games\WuWa\npcs.json" />
 		<Content Remove="Assets\Games\WuWa\objects.json" />
