--- a/.gitignore
+++ b/.gitignore
@@ -664,5 +664,6 @@ Testing/
 .Publish/
 Testing_honkai/
 Testing_wuwa/
+Testing_ZZZ/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,csharp,rider
