Changed validation check for gimi loader exe name

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -1092,4 +1092,6 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </Page>
 	</ItemGroup>
+
+	<ProjectExtensions><VisualStudio><UserProperties assets_4games_4zzz_4game_1json__JsonSchema="json" /></VisualStudio></ProjectExtensions>
 </Project>
