--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -532,6 +532,7 @@
 		<Content Remove="Assets\Games\ZZZ\characters.json" />
 		<Content Remove="Assets\Games\ZZZ\elements.json" />
 		<Content Remove="Assets\Games\ZZZ\game.json" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Soldier11.png" />
 		<Content Remove="Assets\Games\ZZZ\Images\Start_Game.png" />
 		<Content Remove="Assets\Games\ZZZ\npcs.json" />
 		<Content Remove="Assets\Games\ZZZ\objects.json" />
@@ -539,6 +540,31 @@
 		<Content Remove="Assets\Games\ZZZ\weaponClasses.json" />
 		<Content Remove="Assets\Games\ZZZ\weapons.json" />
 		<Content Remove="Assets\Icon_Inventory_Weapons.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Anby.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Anton.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Belle.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Ben.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Billy.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Corin.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Ellen.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Grace.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Koleda.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Lucy.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Lycaon.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Miyabi.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Nekomata.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Nicole.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Piper.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Rina.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Soukaku.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\Wise.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Characters\ZhuYuan.webp" />
+		<Content Remove="Assets\Games\ZZZ\Images\Elements\Electric.svg" />
+		<Content Remove="Assets\Games\ZZZ\Images\Elements\Ether.svg" />
+		<Content Remove="Assets\Games\ZZZ\Images\Elements\Fire.svg" />
+		<Content Remove="Assets\Games\ZZZ\Images\Elements\Ice.svg" />
+		<Content Remove="Assets\Games\ZZZ\Images\Elements\Physical.svg" />
+		<Content Remove="Assets\Games\ZZZ\Images\Star_Game.png" />
 
 		<Content Remove="Assets\ModPanePlaceholder.webp" />
 
