--- a/src/GenshinGenerator/GenshinGenerator.csproj
+++ b/src/GenshinGenerator/GenshinGenerator.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-	  <TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
+	  <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
 	  <RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <Nullable>enable</Nullable>
-	  <PublishAot>true</PublishAot>
+	  <PublishAot>False</PublishAot>
 	  <StripSymbols>true</StripSymbols>
     <Nullable>enable</Nullable>
   </PropertyGroup>
