--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -10,6 +10,10 @@ jobs:
   dotnet-format:
 
     runs-on: windows-latest
+    defaults:
+      run:
+        working-directory: ./src
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
