--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
@@ -396,6 +396,7 @@
 		<Content Remove="Assets\Games\Genshin\regions.json" />
 		<Content Remove="Assets\Games\Genshin\weaponClasses.json" />
 		<Content Remove="Assets\Games\Genshin\weapons.json" />
+		<Content Remove="Assets\Games\Honkai\Images\AltCharacterSkins\Character_Skin_March7Hunt_Thumb.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\acheron.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\argenti.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\arlan.png" />
